@@ -1,3 +1,7 @@
+Wed Aug  1 20:57:30 CEST 2007 Christian Anthon <anthon@kiku.dk>
+
+	* gtkgame.c: set default icon for all windows
+
 Tue Jul 31 00:27:34 CEST 2007 Christian Anthon <anthon@kiku.dk>
 
 	* analysis.c, configure.in, multithread.c, multithread.h, rollout.c,
